package A08_ARA0075_PPS_NA.aula10.exercicio.observer;

public interface Observador {
    void atualizar(int energia);
}
