package A08_ARA0075_PPS_NA.aula10.exercicio.strategy;

public interface Ataque {
    void executar();
}
