package A08_ARA0075_PPS_NA.aula10.exercicio.strategy;

public class AtaqueMagia implements Ataque {
    public void executar() {
        System.out.println("Lançando magia!");
    }
}